Fixed animation lag on mobile

--- a/styles/template.css
+++ b/styles/template.css
@@ -41,6 +41,7 @@ top:0 ;
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     animation-name: banner;
     animation-duration: 1.5s;
+	-webkit-transform: translateZ(0);
 }
 
 
@@ -60,6 +61,7 @@ display:inline-block ;
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     animation-name: left;
     animation-duration: 1.5s;
+	-webkit-transform: translateZ(0);
 }
 
 
@@ -79,6 +81,7 @@ display:inline-block ;
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     animation-name: right;
     animation-duration: 1.5s;
+	-webkit-transform: translateZ(0);
 }
 
 
